--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script> alert("hello, world")</script>
+    <script> alert("hello, world")
+        prompt("Qual o seu nome ?")
+    </script>
 </body>
 </html>
