--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script> alert("hello, world")
-        prompt("Qual o seu nome ?")
+    <script> alert("Olá")
+        prompt("Qual o seu nome?")
     </script>
 </body>
 </html>
