adicionado variável ao projeto

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -8,7 +8,8 @@
 <body>
     <h1>JavaScript</h1>
     <script> alert("Olá")
-        prompt("Qual o seu nome?")
+        let Nome = prompt("Qual o seu nome?")
+        alert("Olá, " + Nome + "!")
     </script>
 </body>
 </html>
