adicionando template string

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -8,8 +8,9 @@
 <body>
     <h1>JavaScript</h1>
     <script> alert("Olá")
-        let Nome = prompt("Qual o seu nome?")
-        alert("Olá, " + Nome + "!")
+        let Nome = prompt("Digite o seu primeiro nome")
+        let Sobrenome = prompt("Digite o seu sobrenome") 
+        alert(`Olá, ${Nome} ${Sobrenome} !`)
     </script>
 </body>
 </html>
