--- a/JS/index2.html
+++ b/JS/index2.html
@@ -10,7 +10,7 @@
     <script> alert("Olá")
         let Idade = prompt("Digite sua idade")
         Idade = Number(Idade)
-        alert("Eu tenho " + Idade + " anos")
+        alert("Eu tenho " + Idade + " anos!")
     </script>
 </body>
 </html>
