--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,10 +7,6 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script> alert("Olá")
-        let Nome = prompt("Digite o seu primeiro nome")
-        let Sobrenome = prompt("Digite o seu sobrenome") 
-        alert(`Olá, ${Nome} ${Sobrenome} !`)
-    </script>
+    <script src="Jscript.js"></script>
 </body>
 </html>
