--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,10 +7,6 @@
 </head>
 <body>
     <h1>JavaScript</h1>
-    <script> alert("Olá")
-        let Idade = prompt("Digite sua idade")
-        Idade = Number(Idade)
-        alert("Eu tenho " + Idade + " anos!")
-    </script>
+    <script src="Jscript.js"></script>
 </body>
 </html>
