--- a/JS/index2.html
+++ b/JS/index2.html
@@ -6,7 +6,7 @@
     <title>Teste JS</title>
 </head>
 <body style="background-color: aquamarine;">
-    <h1>JavaScript</h1>
+    <h1>Sistema de notas</h1>
     <script src="Jscript.js"></script>
 </body>
 </html>
