Adicionando uma parte do formulário

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,6 +7,10 @@
 </head>
 <body style="background-color: aquamarine;">
     <h1>Sistema de notas</h1>
+    <form id="Meu-For">
+        <label for="escola">Escola:</label>
+        <input type="text" id="escola" name="escola" placeholder="nome da escola" required> <br> <!--Formulário imcompleto-->
+    </form>
     <script src="Jscript.js"></script>
 </body>
 </html>
