--- a/JS/index2.html
+++ b/JS/index2.html
@@ -7,10 +7,20 @@
 </head>
 <body style="background-color: aquamarine;">
     <h1>Sistema de notas</h1>
+    <div>
     <form id="Meu-For">
         <label for="escola">Escola:</label>
         <input type="text" id="escola" name="escola" placeholder="nome da escola" required> <br> <!--Formulário imcompleto-->
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" placeholder="nome do aluno" required> <br>
+        <label for="sobrenome">Sobrenome:</label>
+        <input type="text" id="sobrenome" placeholder="sobrenome do aluno" required> <br>
+        <label for="serie">Série:</label>
+        <input type="text" id="seie" placeholder="série do aluno" required>
+
+
     </form>
+    </div>
     <script src="Jscript.js"></script>
 </body>
 </html>
