Atualização no formulário

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -16,7 +16,8 @@
         <label for="sobrenome">Sobrenome:</label>
         <input type="text" id="sobrenome" placeholder="sobrenome do aluno" required> <br>
         <label for="serie">Série:</label>
-        <input type="text" id="seie" placeholder="série do aluno" required>
+        <input type="text" id="serie" placeholder="série do aluno" required> <br>
+        <button type="button" onclick="agir()">Agir</button>
 
 
     </form>
