Alteração no butão

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -17,7 +17,7 @@
         <input type="text" id="sobrenome" placeholder="sobrenome do aluno" required> <br>
         <label for="serie">Série:</label>
         <input type="text" id="serie" placeholder="série do aluno" required> <br>
-        <button type="button" onclick="agir()">Agir</button>
+        <button type="button" onclick="agir()">Enviar</button>
 
 
     </form>
