--- a/JS/index2.html
+++ b/JS/index2.html
@@ -17,9 +17,10 @@
         <input type="text" id="sobrenome" placeholder="sobrenome do aluno" required> <br>
         <label for="serie">Série:</label>
         <input type="text" id="serie" placeholder="série do aluno" required> <br>
+        <label for="nota1">Português:</label>
+
+        <input type="number" id="nota1" placeholder="nota de Português" required> <br>
         <button type="button" onclick="agir()">Enviar</button>
-
-
     </form>
     </div>
     <script src="Jscript.js"></script>
