--- a/JS/index2.html
+++ b/JS/index2.html
@@ -9,17 +9,39 @@
     <h1>Sistema de notas</h1>
     <div>
     <form id="Meu-For">
-        <label for="escola">Escola:</label>
-        <input type="text" id="escola" name="escola" placeholder="nome da escola" required> <br> <!--Formulário imcompleto-->
-        <label for="nome">Nome:</label>
+        <label for="escola"> Escola:</label>
+        <input type="text" id="escola" name="escola" placeholder="nome da escola" required> <br>
+        <label for="nome"> Nome:</label>
         <input type="text" id="nome" placeholder="nome do aluno" required> <br>
-        <label for="sobrenome">Sobrenome:</label>
+        <label for="sobrenome"> Sobrenome:</label>
         <input type="text" id="sobrenome" placeholder="sobrenome do aluno" required> <br>
-        <label for="serie">Série:</label>
-        <input type="text" id="serie" placeholder="série do aluno" required> <br>
+        <label for="serie"> Série:</label>
+        <input type="text" id="serie" placeholder="série do aluno" required> <br> <br>
 
-        <label for="nota1">Português:</label>
+        <label for="nota1"> Português:</label>
         <input type="number" id="nota1" placeholder="nota de Português" required> <br>
+        <label for="nota2"> Inglês:</label>
+        <input type="number" id="nota2" placeholder="nota de Inglês" required> <br>
+        <label for="nota3"> Matemática:</label>
+        <input type="number" id="nota3" placeholder="nota de Matemática" required> <br>
+        <label for="nota4"> Filosofia:</label>
+        <input type="number" id="nota4" placeholder="nota de Filosofia" required> <br>
+        <label for="nota5"> Redação:</label>
+        <input type="number" id="nota5" placeholder="nota de Redação" required> <br>
+        <label for="nota6"> Sociologia:</label>
+        <input type="number" id="nota6" placeholder="nota de Sociologia" required> <br>
+        <label for="nota7"> Geografia:</label>
+        <input type="number" id="nota7" placeholder="nota de Geografia" required> <br>
+        <label for="nota8"> Química:</label>
+        <input type="number" id="nota8" placeholder="nota de Química" required> <br>
+        <label for="nota9"> Física:</label>
+        <input type="number" id="nota9" placeholder="nota de Física" required> <br>
+        <label for="nota10"> Biologia:</label>
+        <input type="number" id="nota10" placeholder="nota de Biologia"> <br>
+        <label for="nota11"> Artes:</label>
+        <input type="number" id="nota11" placeholder="nota de Artes"> <br>
+        <label for="nota12"> Educação Física;</label>
+        <input type="number" id="nota12" placeholder="nota de Ed.Física"> <br>
         <button type="button" onclick="agir()">Enviar</button>
     </form>
     </div>
