Atualização no JavaScript

--- a/JS/index2.html
+++ b/JS/index2.html
@@ -45,6 +45,7 @@
         <button type="button" onclick="agir()">Enviar</button>
     </form>
     </div>
+    <div id="resultado"></div>
     <script src="Jscript.js"></script>
 </body>
 </html>
